# ChangeLog for x11-libs/libXt
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXt/ChangeLog,v 1.38 2007/02/04 18:52:54 joshuabaergen Exp $

  04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org> libXt-1.0.5.ebuild:
  Remove an unnecessary mirror restriction.

  04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org> libXt-1.0.2.ebuild,
  libXt-1.0.4.ebuild:
  Drop mirroring restriction.  Thanks to Zhang Le of bug #163088.

*libXt-1.0.5 (04 Feb 2007)

  04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  +libXt-1.0.5.ebuild:
  Version bump.  Brings some small man page fixes.

*libXt-1.0.4 (09 Nov 2006)

  09 Nov 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  -libXt-1.0.3.ebuild, +libXt-1.0.4.ebuild:
  Fixes the .pc file with newer autotool versions.

*libXt-1.0.3 (21 Oct 2006)

  21 Oct 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +libXt-1.0.3.ebuild:
  Version bump.

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> libXt-1.0.2.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> libXt-1.0.2.ebuild:
  Mark 1.0.2 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; libXt-1.0.2.ebuild:
  ppc/sparc/mips/alpha/arm/sh stable

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  -files/fix_shadow_manpages.patch, -libXt-1.0.0-r1.ebuild:
  Pull old ebuild.

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> libXt-1.0.2.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org> libXt-1.0.2.ebuild:
  Stable on ppc64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; libXt-1.0.2.ebuild:
  x86 stable.

*libXt-1.0.2 (13 May 2006)

  13 May 2006; Donnie Berkholz <spyderous@gentoo.org>; -libXt-1.0.1.ebuild,
  +libXt-1.0.2.ebuild:
  Bump.

*libXt-1.0.1 (29 Apr 2006)

  29 Apr 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +libXt-1.0.1.ebuild:
  Version bump.  Includes fix for shadow manpages.
