@@ -1,24 +1,16 @@
-DIST libXt-1.0.4.tar.bz2 492636 RMD160 4d7f73048d98a4912505476ab33feda574b5b449 SHA1 3a7d7d390214876c925d5226ef3949b6c5bad6ce SHA256 ec7088b2ffe8f56c177525283601fb048decaf6f175d9ee5db01e12810a4d345
 DIST libXt-1.0.5.tar.bz2 500502 RMD160 7e5ef9e03dc860bf5b64b85a897dd1d2ae1ed0bf SHA1 5f33921e373ce162a39eabef2ce05d946935eb5b SHA256 43c472ada59a04428a463225cd4cd42cb81bc43eb687cc1890f2f1c81a3e9cf4
-EBUILD libXt-1.0.4.ebuild 705 RMD160 982b1d1cfe566950776605c2f297d0c6597f28cf SHA1 f2293432c714094c55cf8c2fd3eae74463a8c9c6 SHA256 7dcff605d7216d12d2f710fdfda4807bfdd8db79eb32563f2656a021de17ae3c
-MD5 c00c127a80f0cfdba6d7cdf4ea932988 libXt-1.0.4.ebuild 705
-RMD160 982b1d1cfe566950776605c2f297d0c6597f28cf libXt-1.0.4.ebuild 705
-SHA256 7dcff605d7216d12d2f710fdfda4807bfdd8db79eb32563f2656a021de17ae3c libXt-1.0.4.ebuild 705
-EBUILD libXt-1.0.5.ebuild 718 RMD160 b4c518c7dbdb1873afb7423831c56c9198c124c0 SHA1 574cad77f0a104f5f8438a546581356fe70e7d92 SHA256 7a8e702ad88ef9237119fab068f630accaa77291662a92e040b00d15f51e8a35
-MD5 871ad93d45f6c58242c3dfe926fb19b5 libXt-1.0.5.ebuild 718
-RMD160 b4c518c7dbdb1873afb7423831c56c9198c124c0 libXt-1.0.5.ebuild 718
-SHA256 7a8e702ad88ef9237119fab068f630accaa77291662a92e040b00d15f51e8a35 libXt-1.0.5.ebuild 718
-MISC ChangeLog 4800 RMD160 9b9ab26379e0d4e1909a7e1b0136586555eda3cb SHA1 4d3fb808c544edd35074a24dda9e7c174eb964b6 SHA256 1a05f1e53aecb731325324253f7fe973f2bbfe048b3ee87e2e8b3cc7dd961912
-MD5 0f1320f19c2ee5b4990c69675a1f9402 ChangeLog 4800
-RMD160 9b9ab26379e0d4e1909a7e1b0136586555eda3cb ChangeLog 4800
-SHA256 1a05f1e53aecb731325324253f7fe973f2bbfe048b3ee87e2e8b3cc7dd961912 ChangeLog 4800
+EBUILD libXt-1.0.5.ebuild 712 RMD160 ee9b3390f21b844480ad1f16fb8a68334981fa52 SHA1 2f22b6eaf7b12605bd9b408cda70b6285d280ecb SHA256 d859f6d3efda43c95c2d9b2e37436479085bfdc11b9bf87839a8e9c1a0469af1
+MD5 a3d14493c0f4086c654055664954bff6 libXt-1.0.5.ebuild 712
+RMD160 ee9b3390f21b844480ad1f16fb8a68334981fa52 libXt-1.0.5.ebuild 712
+SHA256 d859f6d3efda43c95c2d9b2e37436479085bfdc11b9bf87839a8e9c1a0469af1 libXt-1.0.5.ebuild 712
+MISC ChangeLog 5103 RMD160 0e82969e4871c215b2fa11e54203c82d8b29e24f SHA1 f6fb332c167b389de3765590d49a48118a036ede SHA256 b3df6593436e35d4464bc3697e03fb252a8b6c5b45f9fe2c3cc948df078ed37a
+MD5 dabb78a54063853f609a36112a1e8c41 ChangeLog 5103
+RMD160 0e82969e4871c215b2fa11e54203c82d8b29e24f ChangeLog 5103
+SHA256 b3df6593436e35d4464bc3697e03fb252a8b6c5b45f9fe2c3cc948df078ed37a ChangeLog 5103
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
 MD5 a37bab73e2f24b213932c30997d3d360 metadata.xml 156
 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 metadata.xml 156
 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055 metadata.xml 156
-MD5 198037f7d4a4e244da8b0dc9ff84a221 files/digest-libXt-1.0.4 238
-RMD160 a055801ecd8550e0f21f5b66c62729899357d0c2 files/digest-libXt-1.0.4 238
-SHA256 f36922d76c23277e6d5cee9eda513c9a003936a0bf153ea63bba9f23c398821c files/digest-libXt-1.0.4 238
 MD5 bfc7ea5350bba16ddfe0165b0f6fe33a files/digest-libXt-1.0.5 238
 RMD160 c42c45f79821d2ec93fce85ce67f5ecbfabf687c files/digest-libXt-1.0.5 238
 SHA256 f69b014e9ed29647daa68b647f85d0953b4e125168167f03ce1ec1c638cbd906 files/digest-libXt-1.0.5 238
