@@ -1,3 +1,0 @@
-MD5 937735f342c046db239852fec0413f6c libXt-1.0.4.tar.bz2 492636
-RMD160 4d7f73048d98a4912505476ab33feda574b5b449 libXt-1.0.4.tar.bz2 492636
-SHA256 ec7088b2ffe8f56c177525283601fb048decaf6f175d9ee5db01e12810a4d345 libXt-1.0.4.tar.bz2 492636
